apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tv
              mountPath: /tv
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
      volumes:
        - name: config
          hostPath:
            path: /mnt/k3s-data/sonarr
            type: DirectoryOrCreate
        - name: tv
          hostPath:
            path: /mnt/media/tv
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /mnt/media/downloads
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.isaacwallace.dev`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
